vertical align and page width fixes

--- a/_sass/layout/_main.scss
+++ b/_sass/layout/_main.scss
@@ -28,6 +28,13 @@ main {
     padding-bottom: 48px;
 }
 
+.vertical-align {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    min-height: 50vh;
+}
+
 @include media( '>medium' ) {
 
     main {
